--- a/app/src/main/res/xml/activity_main_menu_scene.xml
+++ b/app/src/main/res/xml/activity_main_menu_scene.xml
@@ -119,7 +119,18 @@
             android:layout_marginBottom="50dp"
             motion:layout_constraintBottom_toTopOf="@+id/play_solo"
             motion:layout_constraintStart_toStartOf="parent"
-            android:visibility="gone" />
+            android:visibility="invisible"
+            motion:layout_constraintTop_toTopOf="parent" />
+        <Constraint
+            android:id="@+id/usernameTextView"
+            android:layout_width="334dp"
+            android:layout_height="49dp"
+            motion:layout_constraintTop_toBottomOf="@+id/cardView"
+            android:layout_marginTop="8dp"
+            android:visibility="invisible"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintHorizontal_bias="0.493"
+            motion:layout_constraintEnd_toEndOf="parent" />
     </ConstraintSet>
     <Transition
         motion:constraintSetStart="@+id/start"
